# vector

./: Cargo.toml  Makefile  build.rs
.github/workflows/: rustdoc.yml
benches/: add_fields.rs  benchvec.rs  remap.rs
benches/ddmetrics/: mod.rs
benches/test_framework/: transform.rs
benches/test_framework/transform/: bench.rs  test.rs
docs/manual/administration/: monitoring.md
docs/reference/: remap.cue
lib/datadog/grok/: Cargo.toml
lib/experiments/: Cargo.toml
lib/parsing/: Cargo.toml
lib/parsing/src/: key_value.rs  lib.rs  value.rs
lib/remap-cli/: Cargo.toml
lib/remap-cli/src/: main.rs
lib/remap-functions/src/: assert.rs  ceil.rs  compact.rs  contains.rs  ends_with.rs  floor.rs  format_number.rs  join.rs  merge.rs  parse_aws_vpc_flow_log.rs  parse_json.rs  parse_timestamp.rs  replace.rs  round.rs  slice.rs  split.rs  starts_with.rs  to_bool.rs  to_float.rs  to_int.rs  to_string.rs  to_timestamp.rs  truncate.rs
lib/remap-lang/: Cargo.toml
lib/remap-lang/src/: expression.rs  function.rs  operator.rs  program.rs  runtime.rs  test_util.rs
lib/remap-lang/src/expression/: argument.rs  arithmetic.rs  array.rs  assignment.rs  block.rs  function.rs  if_statement.rs  literal.rs  map.rs  noop.rs  not.rs  path.rs  variable.rs
lib/vector-buffers/: Cargo.toml
lib/vector-config/: Cargo.toml
lib/vector-config-common/: Cargo.toml
lib/vector-config-common/src/: validation.rs
lib/vector-config-macros/: Cargo.toml
lib/vector-core/: Cargo.toml
proto/: vector.proto
rfcs/: 2020-12-08-5457-dynamic-sampling.md
scripts/: build-docker.sh
scripts/integration/: Dockerfile
src/: lib.rs  metrics.rs  trace.rs
src/conditions/: vrl.rs
tests/support/: mod.rs
(+60 files in other folders)
