[package]
name = "remap-lang"
version = "0.1.0"
authors = ["Vector Contributors <vector@timber.io>"]
edition = "2018"
publish = false

[dependencies]
bitflags = "1"
bytes = "0.5.6"
chrono = "0.4"
dyn-clone = "1"
paste = "1"
pest = "2"
pest_derive = "2"
regex = "1"
serde = "1"
thiserror = "1"
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

[dev-dependencies]
criterion = "0.3"
